--- a/main.kv
+++ b/main.kv
@@ -1,7 +1,33 @@
 # main.kv
 
-<RootWidget>
-    orientation: 'vertical'
-    Label:
-        text: 'Hello, Kivy!'
-                color: 1, 0, 0, 1  # Red color (RGBA values)
+GridLayout: 
+    cols: 2
+
+    #The left column wil be for uploading images and taggin
+    BoxLayout:
+        orientation: 'vertical;
+        spacing: 10
+        padding: 10
+
+        Image: 
+            id: display_image
+            source: ''
+
+        Buttons:
+            text: 'Upload Image'
+            on_release: app.chose_file()
+        
+        TextInput:
+            id: tag_input
+            hint_text: 'Enter tags seperated by commas'
+        
+    #The right column is for practice section
+    BoxLayout:
+        orientation: 'vertical'
+        spacing: 10
+        padding: 10
+
+        Label:
+            text: 'Practice Section'
+        
+        #Add practice tools here
